src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Child</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting previous task</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Not Required</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Task aborted</fullName>
        </values>
        <values>
            <fullName>Task blocked</fullName>
        </values>
        <values>
            <fullName>Task completed</fullName>
        </values>
        <values>
            <fullName>Task in progress</fullName>
        </values>
        <values>
            <fullName>Task ready to start</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Parent</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>A task is blocked</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Process Completed</fullName>
        </values>
        <values>
            <fullName>Task aborted</fullName>
        </values>
        <values>
            <fullName>Tasks completed</fullName>
        </values>
        <values>
            <fullName>Tasks in progress</fullName>
        </values>
        <values>
            <fullName>Tasks to start</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Actual_SLA__c</fullName>
        <formula>Duration__c / SLA_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual/SLA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Attachments_to_be_included__c</fullName>
        <label>Attachments to be included</label>
        <picklist>
            <picklistValues>
                <fullName>Product Tables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rate Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client logo</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Audience__c</fullName>
        <label>Audience</label>
        <picklist>
            <picklistValues>
                <fullName>Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overseas Visitor</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Book_and_App_is_for_Resident_and_Oversea__c</fullName>
        <label>Book and App</label>
        <picklist>
            <picklistValues>
                <fullName>Resident only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overseas Visitor only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resident and Overseas Visitor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Reference</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Cases (Case Reference)</relationshipLabel>
        <relationshipName>CasesRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comm_Sent__c</fullName>
        <formula>IF(
Due_Yesterday__c = true, &apos;Overdue Email Sent&apos;,
IF(
Due_Today__c = true, &apos;Due Today Email Sent&apos;,
IF(
Due_Tomorrow__c = true, &apos;Due Tomorrow Email Sent&apos;,&apos;&apos;)))</formula>
        <label>Comm Sent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>The date that the case had the stage &quot;Task ready to start&quot;</description>
        <label>Case Started Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Delivery_Status__c</fullName>
        <formula>IF(
Duration__c &lt; SLA_Days__c, &apos;Delivered Early&apos;,
IF(
Duration__c = SLA_Days__c, &apos;Delivered On Time&apos;,
IF(
Duration__c &gt; SLA_Days__c, &apos;Delivered Late&apos;, &apos;&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependancy__c</fullName>
        <label>Dependancy</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dependency</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Child</value>
            </filterItems>
            <infoMessage>Please select the child case that needs to finish before this case is started</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Today__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by apex scheduled class to mark Cases that are due today to trigger the email alert workflow</description>
        <label>Due Today</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Tomorrow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by apex scheduled class to mark Cases that are due tomorrow to trigger the email alert workflow</description>
        <label>Due Tomorrow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Yesterday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by apex scheduled class to mark Cases that were due yesterday to trigger the email alert workflow</description>
        <label>Due Yesterday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Actual Duration (Days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_use_only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email use only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Close_Date__c</fullName>
        <label>Estimated Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Estimated_Start_Date__c</fullName>
        <label>Estimated Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>External ID for Reference</description>
        <externalId>true</externalId>
        <label>External_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_message__c</fullName>
        <label>Key message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Collateral_type__c</fullName>
        <description>Only used for Marketing Cases. Indicates correct flyer content.</description>
        <label>Collateral type</label>
        <picklist>
            <picklistValues>
                <fullName>Flyer: New group or employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flyer: Transferring from another health fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flyer: Moving to SplitPay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flyer: Changes to corporate health plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flyer: Take your cover with you</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flyer: Transferring to residency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAQs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poster/Banner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_of_versions__c</fullName>
        <label>No of versions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Renewal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity/Renewal</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Subject__c</fullName>
        <formula>Parent.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_to_be_printed__c</fullName>
        <label>Quantity to be printed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Queue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_request__c</fullName>
        <label>Reason for request</label>
        <picklist>
            <picklistValues>
                <fullName>Broker request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SplitPay transition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Record_Id__c</fullName>
        <description>The Id of the record that the parent relates to (used for linked back)</description>
        <formula>IF( 
AND(RecordType.Name == &apos;Parent&apos;,Opportunity_Renewal__c != null), Opportunity_Renewal__c, 
IF( 
AND(RecordType.Name == &apos;Parent&apos;,Group__c != null), Group__c, 
IF( 
AND(RecordType.Name == &apos;Parent&apos;,Section__c != null), Section__c, 
IF( 
Parent.Opportunity_Renewal__c != null, Parent.Opportunity_Renewal__c, 
IF( 
Parent.Group__c != null, Parent.Group__c, 
IF( 
Parent.Section__c != null, Parent.Section__c, &quot;N/A&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Record Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Record_Type__c</fullName>
        <formula>IF( 
AND(RecordType.Name == &apos;Parent&apos;,Opportunity_Renewal__c != null), Opportunity_Renewal__r.RecordType.Name, 
IF( 
AND(RecordType.Name == &apos;Parent&apos;,Group__c != null), &apos;Group&apos;, 
IF( 
AND(RecordType.Name == &apos;Parent&apos;,Section__c != null), &apos;Section&apos;, 
IF( 
Parent.Opportunity_Renewal__c != null, Parent.Opportunity_Renewal__r.RecordType.Name, 
IF( 
Parent.Group__c != null, &apos;Group&apos;, 
IF( 
Parent.Section__c != null, &apos;Section&apos;, &apos;Relationship Unknown&apos;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Record__c</fullName>
        <formula>IF(
AND(RecordType.Name == &apos;Parent&apos;,Opportunity_Renewal__c != null), Opportunity_Renewal__r.Name,
IF(
AND(RecordType.Name == &apos;Parent&apos;,Group__c != null), Group__r.Name,
IF(
AND(RecordType.Name == &apos;Parent&apos;,Section__c != null), Section__r.Name,
IF(
Parent.Opportunity_Renewal__c != null, Parent.Opportunity_Renewal__r.Name,
IF(
Parent.Group__c != null, Parent.Group__r.Name,
IF(
Parent.Section__c != null, Parent.Section__r.Name,&quot;N/A&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Days__c</fullName>
        <label>SLA (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Delivery_Performance__c</fullName>
        <description>Calculating the percentage of delivery performance (Actual Duration / SLA Days)</description>
        <formula>IF(
AND(
NOT(ISNULL(ClosedDate)),
OR(
ISPICKVAL(Status, &apos;Task Completed&apos;),
ISPICKVAL(Status, &apos;Tasks Completed&apos;))),
Duration__c / SLA_Days__c,
null)</formula>
        <label>SLA Delivery Performance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Section</label>
        <referenceTo>Section__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Skip_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <picklist>
            <picklistValues>
                <fullName>Account Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wellness Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>Account_Support_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Related_Record__c</columns>
        <columns>PARENT.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>Code__c</columns>
        <columns>SLA_Days__c</columns>
        <columns>Estimated_Start_Date__c</columns>
        <columns>Estimated_Close_Date__c</columns>
        <columns>Team__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,Task ready to start,Task in progress,On Hold,Escalated</value>
        </filters>
        <label>Account Support Team</label>
        <queue>Account_Support</queue>
        <sharedTo>
            <group>UAT_Setup</group>
            <role>Account_Support_Analyst</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Related_Record__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>Code__c</columns>
        <columns>SLA_Days__c</columns>
        <columns>Estimated_Start_Date__c</columns>
        <columns>Estimated_Close_Date__c</columns>
        <columns>Team__c</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Closed_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Related_Record__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>Code__c</columns>
        <columns>SLA_Days__c</columns>
        <columns>Estimated_Start_Date__c</columns>
        <columns>Estimated_Close_Date__c</columns>
        <columns>Team__c</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>Commercial_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Related_Record__c</columns>
        <columns>PARENT.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>Code__c</columns>
        <columns>SLA_Days__c</columns>
        <columns>Estimated_Start_Date__c</columns>
        <columns>Estimated_Close_Date__c</columns>
        <columns>Team__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,Task ready to start,Task in progress,On Hold,Escalated</value>
        </filters>
        <label>Commercial Team</label>
        <queue>Commercial</queue>
        <sharedTo>
            <group>UAT_Setup</group>
            <role>Commercial_Analyst</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Compliance_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Related_Record__c</columns>
        <columns>PARENT.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>Code__c</columns>
        <columns>SLA_Days__c</columns>
        <columns>Estimated_Start_Date__c</columns>
        <columns>Estimated_Close_Date__c</columns>
        <columns>Team__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,Task ready to start,Task in progress,On Hold,Escalated</value>
        </filters>
        <label>Compliance Team</label>
        <queue>Compliance</queue>
        <sharedTo>
            <group>UAT_Setup</group>
            <role>Account_Manager</role>
            <role>Compliance</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Marketing_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Related_Record__c</columns>
        <columns>PARENT.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>Code__c</columns>
        <columns>SLA_Days__c</columns>
        <columns>Estimated_Start_Date__c</columns>
        <columns>Estimated_Close_Date__c</columns>
        <columns>Team__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,Task ready to start,Task in progress,On Hold,Escalated</value>
        </filters>
        <label>Marketing Team</label>
        <queue>Marketing</queue>
        <sharedTo>
            <group>UAT_Setup</group>
            <role>Head_of_Products_Marketing_and_Comms</role>
            <role>Marketing_Analyst</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Related_Record__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>Code__c</columns>
        <columns>SLA_Days__c</columns>
        <columns>Estimated_Start_Date__c</columns>
        <columns>Estimated_Close_Date__c</columns>
        <columns>Team__c</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Child</value>
        </filters>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Related_Record__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>Code__c</columns>
        <columns>SLA_Days__c</columns>
        <columns>Estimated_Start_Date__c</columns>
        <columns>Estimated_Close_Date__c</columns>
        <columns>Team__c</columns>
        <columns>Related_Record_Type__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases (Parent &amp; Child)</label>
    </listViews>
    <listViews>
        <fullName>SSC_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Related_Record__c</columns>
        <columns>PARENT.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>Code__c</columns>
        <columns>SLA_Days__c</columns>
        <columns>Estimated_Start_Date__c</columns>
        <columns>Estimated_Close_Date__c</columns>
        <columns>Team__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,Task ready to start,Task in progress,On Hold,Escalated</value>
        </filters>
        <label>SSC Team</label>
        <queue>SSC</queue>
        <sharedTo>
            <group>UAT_Setup</group>
            <role>Account_Manager</role>
            <role>Sales_Support_Consultant</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Systems_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Related_Record__c</columns>
        <columns>PARENT.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>Code__c</columns>
        <columns>SLA_Days__c</columns>
        <columns>Estimated_Start_Date__c</columns>
        <columns>Estimated_Close_Date__c</columns>
        <columns>Team__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,Task ready to start,Task in progress,On Hold,Escalated</value>
        </filters>
        <label>Systems Team</label>
        <queue>Systems</queue>
        <sharedTo>
            <group>UAT_Setup</group>
            <role>Systems_Consultant</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Web_BA_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Related_Record__c</columns>
        <columns>PARENT.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>Code__c</columns>
        <columns>SLA_Days__c</columns>
        <columns>Estimated_Start_Date__c</columns>
        <columns>Estimated_Close_Date__c</columns>
        <columns>Team__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,Task ready to start,Task in progress,On Hold,Escalated</value>
        </filters>
        <label>Web BA Team</label>
        <queue>Web_BA</queue>
        <sharedTo>
            <group>UAT_Setup</group>
            <role>Web_Business_Analyst</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Wellness_Manager_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Related_Record__c</columns>
        <columns>PARENT.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>Code__c</columns>
        <columns>SLA_Days__c</columns>
        <columns>Estimated_Start_Date__c</columns>
        <columns>Estimated_Close_Date__c</columns>
        <columns>Team__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,Task ready to start,Task in progress,On Hold,Escalated</value>
        </filters>
        <label>Wellness Manager</label>
        <queue>Wellness_Manager</queue>
        <sharedTo>
            <group>UAT_Setup</group>
            <role>Wellness_Manager</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Child</fullName>
        <active>true</active>
        <businessProcess>Child</businessProcess>
        <label>Child</label>
    </recordTypes>
    <recordTypes>
        <fullName>Parent</fullName>
        <active>true</active>
        <businessProcess>Parent</businessProcess>
        <label>Parent</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Case_Not_Ready</fullName>
        <active>true</active>
        <description>Can not take ownership of case when case is not ready</description>
        <errorConditionFormula>AND(
ISCHANGED( OwnerId ),
ISPICKVAL(Status, &apos;Awaiting previous task&apos;)
)</errorConditionFormula>
        <errorMessage>You can not take ownership of a case that is not ready (ie awaiting a previous case to be completed). Please wait until all prerequisites have been completed and the task becomes ready.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Case_Ready_to_Start</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
AND(
NOT(ISNEW()),
RecordType.Name = &apos;Child&apos;,
ISPICKVAL(PRIORVALUE(Status),&apos;Awaiting previous task&apos;),
NOT(ISPICKVAL(Status,&apos;Task ready to start&apos;)),
NOT(ISPICKVAL(Status,&apos;Task blocked&apos;))),
TRUE,
FALSE)</errorConditionFormula>
        <errorMessage>A case that has status &apos;Awaiting previous task&apos; must first be changed to &apos;Task ready to start&apos; before it can progress through the latter statuses</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Case_Status_Lock</fullName>
        <active>true</active>
        <description>Prevent users from changing the status of a case that is already closed.</description>
        <errorConditionFormula>IF(
AND(
ISCHANGED(Status),
PRIORVALUE(IsClosed) = true),
true,false)</errorConditionFormula>
        <errorMessage>You can not change the status of a case once it is closed</errorMessage>
    </validationRules>
</CustomObject>